<resources>
    <string name="app_name">CartyProject</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="signup">SignUp</string>
    <string name="loginhere">Already have an account?<u>Login</u> </string>
    <string name="signuphere">Create a new account? SignUp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="SelectLocation" />
    <string name="Select" />
    <string name="product_image" />
    <string name="product_name_hint" />
    <string name="save_button_text" />
    <string name="product_category_hint" />
    <string name="product_price_hint" />
    <string name="product_description_hint" />
    <string name="contact">Contact</string>
    <string name="save">Save</string>
    <string name="product_name">Product Name</string>
    <string name="product_description">Product Description</string>
    <!--    <string name="product_price">Product Price</string>-->
    <string name="store_name">Store Name</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="product">Product</string>


    <string-array name="product_categories">
        <item>free_range</item>
        <item>organic</item>
        <item>pork_rashers</item>
        <item>turkey</item>
    </string-array>

    <string-array name="product_names">
        <item>Select Product</item>
        <item>SMOKED RASHERS WITH ATLANTIC SEAT SALT</item>
        <item>UNSMOEKD STREAKY BACON RASHERS WITH ATLANTIC SEA SALT</item>
        <item>THIN &amp; CRISPY BEECHWOOD SMOKED STREAKY RASHERS</item>
    </string-array>

    <string-array name="store_names">
        <item>Select Store</item>
        <item>Dunnes</item>
        <item>Supervalue</item>
        <item>Tesco</item>
    </string-array>


    <!--    <string-array name="store_names_price">-->
    <!--        <item>Store 1</item>-->
    <!--        <item>Store 2</item>-->
    <!--        <item>Store 3</item>-->
    <!--    </string-array>-->

    <string-array name="locations">

        <item>Location 1</item>
        <item>Location 2</item>
        <item>Location 3</item>
    </string-array>

    <string-array name="products">
        <item>Product 1</item>
        <item>Product 2</item>
        <item>Product 3</item>
    </string-array>

    <string-array name="county_names">
        <item>County1</item>
        <item>County2</item>
        <item>County3</item>
    </string-array>
    <string name="product_price">$%.2f</string>

    <string-array name="counties">
        <item>Westmeath</item>
        <item>Rosscomon</item>
        <item>Meath</item>
    </string-array>
    <string-array name="town_names">
        <item>Town1</item>
        <item>Town2</item>
        <item>Town3</item>
    </string-array>

    <string-array name="store_names_price">
        <item>Town1</item>
        <item>Town2</item>
        <item>Town3</item>
    </string-array>


    <string name="nav_header_title">Oliver</string>
    <string name="nav_header_subtitle">Oliver@olivercarty.ie</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_products">Products</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_logout">Logout</string>
    <string name="name">Name</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="privacy">Privacy</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="feedback">Feedback</string>
    <string name="pricesurvey">PriceSurvey</string>
    <string name="product_image_description" />
    <string name="logo_desc" />
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="remember_me" />
    <string name="remenber_me">Remenber me</string>
    <string name="product_image_desc" />
    <string name="store_image" />

</resources>